@@ -356,9 +356,9 @@ pInfoFunc VerilogAComps[] =
 pInfoFunc digitalComps[] =
   {&Digi_Source::info, &Logical_Inv::info, &Logical_OR::info,
    &Logical_NOR::info, &Logical_AND::info, &Logical_NAND::info,
-   &Logical_XOR::info, &Logical_XNOR::info, &RS_FlipFlop::info,
-   &D_FlipFlop::info, &JK_FlipFlop::info, &VHDL_File::info,
-   &Verilog_File::info, &Digi_Sim::info, 0};
+   &Logical_XOR::info, &Logical_XNOR::info, &Logical_Buf::info,
+   &RS_FlipFlop::info, &D_FlipFlop::info, &JK_FlipFlop::info,
+   &VHDL_File::info, &Verilog_File::info, &Digi_Sim::info, 0};
 
 pInfoFunc Simulations[] =
   {&DC_Sim::info, &TR_Sim::info, &AC_Sim::info, &SP_Sim::info,
